Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	turn off asis (setlocale(LC_CTYPE) takes care of it);
	turn off baudrate (leave optimizations of terminal baudrate on the user)

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, tty.c:
	make joe compilable (not only) on cygwin - check if siginterrupt() is
	available on this host

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	remove feature: exchange points of start and end of the block when
	checking validity of block pointers

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* rc.c:
	change indentation of initialization of pdefault, fdefault
	and glopts arrays; add comments to [pf]default struct members

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c, path.h, tty.c, tty.h:
	move pwd() into path.c; check in autoconf if we have at least one
	of getcwd() / getwd()

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, configure.ac, tty.c, tty.h, tw.c, uedit.c, utils.c, utils.h,
	vfile.c:
	move jread() / jwrite() into utils.c and rename them to joe_read() /
	joe_write(); add checking of size_t and ssize_t into configure scripts

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	use .@7 terminfo entry for "End" key

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	use "Ctrl-K H for help" in -rmsg (F1 doesn't work in all cases)

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* blocks.c, help.c, macro.c, main.c, path.c, rc.c, regex.c, scrn.c,
	termcap.c, tw.c, ublock.c, uedit.c, usearch.c, vs.c, w.c:
	change indentation of cases in the switch() statement

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, main.c, path.c, rc.c, regex.c, scrn.c, termcap.c,
	termidx.c, tty.c, tw.c, ublock.c, uedit.c, uerror.c, uformat.c, undo.c,
	utag.c, vfile.c, vs.c, w.c:
	change indentation of do {} while(); cycles

Wed Nov 28 2001  Vitezslav Samel <samel@mail.cz>