@@ -8,11 +8,13 @@
 #include "config.h"
 #include "types.h"
 
+#include <ctype.h>
 #include <stdio.h>
 #ifdef HAVE_STDLIB_H
 #include <stdlib.h>
 #endif
 
+#include "bw.h"
 #include "blocks.h"
 #include "termcap.h"
 #include "scrn.h"
@@ -23,95 +25,114 @@ int columns = 0;
 
 extern int mid;
 
-/* How to display characters */
-
-unsigned xlata[256] = {
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-	UNDERLINE,
-
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE, INVERSE + UNDERLINE, INVERSE + UNDERLINE,
-	INVERSE + UNDERLINE,
-
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-	INVERSE,
-	INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE, INVERSE,
-
-	INVERSE + UNDERLINE,
-};
-
+/* How to display characters (especially the control ones) */
+/* here are characters ... */
 unsigned char xlatc[256] = {
-	64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
-	80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95,
-	32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47,
-	48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63,
-	64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
-	80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95,
-	96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109,
-	110,
-	111,
-	112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124,
-	125,
-	126, 63,
-	64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
-	80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95,
-	32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47,
-	48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63,
-	64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
-	80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95,
-	96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109,
-	110,
-	111,
-	112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124,
-	125,
-	126, 63
+	 64,  65,  66,  67,  68,  69,  70,  71,			/*   8 */
+	 72,  73,  74,  75,  76,  77,  78,  79,			/*  16 */
+	 80,  81,  82,  83,  84,  85,  86,  87,			/*  24 */
+	 88,  89,  90,  91,  92,  93,  94,  95,			/*  32 */
+	 32,  33,  34,  35,  36,  37,  38,  39,			/*  40 */
+	 40,  41,  42,  43,  44,  45,  46,  47,			/*  48 */
+	 48,  49,  50,  51,  52,  53,  54,  55,			/*  56 */
+	 56,  57,  58,  59,  60,  61,  62,  63,			/*  64 */
+
+	 64,  65,  66,  67,  68,  69,  70,  71,			/*  72 */
+	 72,  73,  74,  75,  76,  77,  78,  79,			/*  80 */
+	 80,  81,  82,  83,  84,  85,  86,  87,			/*  88 */
+	 88,  89,  90,  91,  92,  93,  94,  95,			/*  96 */
+	 96,  97,  98,  99, 100, 101, 102, 103,			/* 104 */
+	104, 105, 106, 107, 108, 109, 110, 111,			/* 112 */
+	112, 113, 114, 115, 116, 117, 118, 119,			/* 120 */
+	120, 121, 122, 123, 124, 125, 126,  63,			/* 128 */
+
+	 64,  65,  66,  67,  68,  69,  70,  71,			/* 136 */
+	 72,  73,  74,  75,  76,  77,  78,  79,			/* 144 */
+	 80,  81,  82,  83,  84,  85,  86,  87,			/* 152 */
+	 88,  89,  90,  91,  92,  93,  94,  95,			/* 160 */
+	 32,  33,  34,  35,  36,  37,  38,  39,			/* 168 */
+	 40,  41,  42,  43,  44,  45,  46,  47,			/* 176 */
+	 48,  49,  50,  51,  52,  53,  54,  55,			/* 184 */
+	 56,  57,  58,  59,  60,  61,  62,  63,			/* 192 */
+
+	 64,  65,  66,  67,  68,  69,  70,  71,			/* 200 */
+	 72,  73,  74,  75,  76,  77,  78,  79,			/* 208 */
+	 80,  81,  82,  83,  84,  85,  86,  87,			/* 216 */
+	 88,  89,  90,  91,  92,  93,  94,  95,			/* 224 */
+	 96,  97,  98,  99, 100, 101, 102, 103,			/* 232 */
+	104, 105, 106, 107, 108, 109, 110, 111,			/* 240 */
+	112, 113, 114, 115, 116, 117, 118, 119,			/* 248 */
+	120, 121, 122, 123, 124, 125, 126,  63			/* 256 */
 };
+/* ... and here their attributes */ 
+unsigned xlata[256] = {
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*   4 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*   8 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  12 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  16 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  20 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  24 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  28 */
+	UNDERLINE, UNDERLINE, UNDERLINE, UNDERLINE,		/*  32 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,		/*  48 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,		/*  64 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,		/*  80 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,		/*  96 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,		/* 112 */
+	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, UNDERLINE,	/* 128 */
+
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 130 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 132 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 134 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 136 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 138 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 140 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 142 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 144 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 146 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 148 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 150 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 152 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 154 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 156 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 158 */
+	INVERSE + UNDERLINE, INVERSE + UNDERLINE,		/* 160 */
+
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 164 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 168 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 172 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 176 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 180 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 184 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 188 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 192 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 196 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 200 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 204 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 208 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 212 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 216 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 220 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 224 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 228 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 232 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 236 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 240 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 244 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 248 */
+	INVERSE, INVERSE, INVERSE, INVERSE,			/* 252 */
+	INVERSE, INVERSE, INVERSE, INVERSE + UNDERLINE		/* 256 */
+};
+
+void xlat(int *attr, unsigned char *c)
+{
+	if(isprint(*c) || (dspasis && *c > 128))
+		*attr = 0;
+	else {
+		*attr = xlata[*c];
+		*c = xlatc[*c];
+	}
+}
 
 /* Set attributes */
 
